# rag_recipe

./: .env.example  .gitignore  CODEX_PROGRESS.md  README.md  README_EXECUTION_ORDER.md  alembic.ini  app.py  pyproject.toml  requirements.txt
agent/: react_agent.py
agent/routing/: __init__.py  query_router.py
agent/tools/: agent_tools.py  middleware.py
alembic/: env.py
alembic/versions/: 0004_bad_case_review.py  (+3 more)
config/: agent.yml  chroma.yml  graph.yml  prompts.yml  rag.yml
docs/: current_architecture.md  external_dependencies.md  final_migration_report.md  migration_inventory.md  retrieval_metadata_contract.md  skill_authoring.md
frontend/: streamlit_app.py
graph/: build_graph_store.py  graph_builder.py  graph_data_preparation.py  graph_retriever.py  neo4j_client.py  recipe_parser.py  schema.py
model/: factory.py
prompts/: main_prompt.txt  rag_summarize.txt
rag/: hybrid_rag_service.py  rag_service.py  vector_store.py
recipe_assistant/: __init__.py  main.py
reports/: final_evaluation.json  final_performance.json  legacy_v2_parity_report.json  legacy_v2_performance_report.json  v2_observation_report.json
scripts/: backup_local_data.ps1  check_environment.ps1  compare_legacy_vs_v2.py  final_smoke_test.ps1  import_nutrition_data.py  run_evaluation.py  scan_legacy_references.ps1  smoke_windows.ps1  start_api.ps1  start_streamlit.ps1
test/: test_graph_retriever.py  test_hybrid_retriever.py  test_model.py  test_neo4j.py  test_query_router.py  test_single_recipe.py
tests/: conftest.py
utils/: config_handler.py  file_handler.py  prompt_loader.py
(+178 files in other folders)
