[project]
name = "rag-recipe"
version = "0.1.0"
description = "Intelligent recipe assistant"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".git",
    ".idea",
    ".vscode",
    "data",
    "logs",
    "model/embeddingmodels",
    "storage",
]

[tool.ruff.lint]
# Task 01 freezes legacy runtime behavior, so the initial repository-wide gate
# covers syntax errors, invalid control flow and undefined names. Style rules
# can be enabled incrementally after the baseline is protected.
select = ["E9", "F63", "F7", "F82"]
